--- a/app/assets/stylesheets/notifications.scss
+++ b/app/assets/stylesheets/notifications.scss
@@ -22,7 +22,7 @@
         color: black;
         display: inline-block;
         padding: 15px 15px;
-        box-shadow: 0 1px 1px 2px #efefef;
+        box-shadow: 0 1px 1px 2px #e1e1e1;
         width: 100%;
         text-align: left;
         a{
